--- a/src/index.css
+++ b/src/index.css
@@ -48,18 +48,16 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  /* background-color: #1a1a1a; */
   cursor: pointer;
   transition: border-color 0.25s;
 }
 
-button:hover {
-  border-color: #646cff;
-}
+
 
 button:focus,
 button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  /* outline: 4px auto -webkit-focus-ring-color; */
 }
 
 @media (prefers-color-scheme: light) {
@@ -73,6 +71,6 @@ button:focus-visible {
   }
 
   button {
-    background-color: #f9f9f9;
+    /* background-color: #f9f9f9; */
   }
 }
